Fix scrollbar styling

--- a/src/webview/styles/globals.css
+++ b/src/webview/styles/globals.css
@@ -1,3 +1,7 @@
+* {
+  scrollbar-color: auto;
+}
+
 .chat-container {
   display: flex;
   flex-direction: column;
@@ -142,7 +146,6 @@
   background-color: var(--vscode-editorWidget-background);
   width: calc(100vw - 2 * var(--shiny-assistant-margin-x));
   box-sizing: border-box;
-  scrollbar-color: auto;
 }
 
 pre {
@@ -152,7 +155,6 @@ pre {
   margin: 5px 0;
   padding: 3px 6px;
   text-wrap: wrap;
-  scrollbar-color: inherit;
 }
 code {
   font-family: var(--vscode-editor-font-family);
